MET-2477 MCS update Spring version. MET-2652 - Remove UriHelper